# rust-web-scrapper

./: Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  llm.rs  main.rs  scraper.rs
src/api/: mod.rs  models.rs  response.rs  routes.rs
