[package]
name = "rust-web-scrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }